<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<TableLayout
    android:id="@+id/tableInputs"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:shrinkColumns="*"
    android:stretchColumns="2"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">
    <TableRow
        android:id="@+id/brandRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brandLabel"
            />
        <EditText
            android:layout_span="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/brand_input"
            android:hint="@string/brandLabel"
            android:inputType="text"
            android:minHeight="48dp"
            android:importantForAutofill="no" />
    </TableRow>
    <TableRow
        android:id="@+id/modelRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modelLabel"
            />
        <EditText
            android:layout_span="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/model_input"
            android:hint="@string/modelLabel"
            android:inputType="text"
            android:minHeight="48dp"
            android:importantForAutofill="no" />
    </TableRow>
    <TableRow
        android:id="@+id/versionRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/versionLabel"
            />
        <EditText
            android:layout_span="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/version_input"
            android:hint="@string/versionLabel"
            android:inputType="text"
            android:minHeight="48dp"
            android:importantForAutofill="no" />
    </TableRow>
    <TableRow
        android:id="@+id/urlRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/urlLabel"
            />
        <EditText
            android:layout_span="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/url_input"
            android:hint="@string/urlLabel"
            android:inputType="textUri"
            android:minHeight="48dp"
            android:importantForAutofill="no" />
    </TableRow>
    <TableRow
        android:padding="5dp"
        android:id="@+id/buttonsRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarStyle"
        >
        <Button
            android:id="@+id/webButton"
            android:text="@string/urlLabel"
            style="?android:attr/buttonBarButtonStyle"
            />
        <Button
            android:id="@+id/cancelButton"
            android:text="@string/cancelLabel"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/saveButton"
            android:text="@string/saveLabel"
            style="?android:attr/buttonBarButtonStyle"/>
    </TableRow>
</TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>